Revision history for Module::Provision

          - Updated toolchain
          - Readded ShareDir to dist ini
          - Added cover method
          - Updated prereqs
          - Documented configuration options
          - Added public repo prefix to config options
          - Added TraitFor::Badges

0.39.1    2015-02-11 19:02:24
          - Fixed tests some more

0.38.1    2015-02-11 17:50:11
          - Fixed tests

0.37.1    2015-02-11 16:02:39
          - Made _license_keys public
          - Replaced C::U::TraitFor::MetaData with CPAN::Meta
          - Fixed appbase logic, again
          - Added module_metadate attribute
          - Can load multiple plugins. Comma separated list
          - Added loading of plugin module
          - Switched to private lexical subroutines
0
0.36.1    2014-10-28 13:45:12
          - Fixed spelling

0.35.11   2014-10-28 13:29:54
          - Added release method to ::VCS
          - Added t::boilerplate.pm
          - Add .pm files to prereq_diffs for build_requires
          - Ignore t/* files in prereq_diffs for requires
          - Replaced namespace::sweep with namespace::autoclean
          - Added fury badge
          - Better parsing of module name from project file
          - Validate args in call to update_copyright_year

0.34.1    2014-05-19 12:45:10
          - c6a96d00-df30-11e3-84c4-fc77f9652e90 Test::Requires Hash::MoreUtils

0.33.1    2014-05-15 21:54:47
          - Removed dependency on File::Slurp. Not needed since
            D:Z:P:ManifestInRoot became a seperate dist

0.32.1    2014-05-01 15:32:09
          - Removed Ident and VERSION lines

0.31.2    2014-01-24 21:04:29
          - Updated dependencies
          - Select project does better job of picking the project dir

0.30.1    2014-01-15 18:05:13
          - Using Unexpected exception classes
          - Stopped using C::U::File::io
          - Apply C::U::T::MetaData for get_package_meta method
          - Stopped localizing error messages