@@ -18,6 +18,7 @@ nytprof.out
 pm_to_blib
 README
 README.pod
+t/code_templates
 t/ipc_srlock*
 *.tar.gz
 Module-Provision-*
