@@ -10,6 +10,7 @@ bin/module-provision
 lib/Module/Provision.pm
 lib/Module/Provision/Base.pm
 lib/Module/Provision/Config.pm
+lib/Module/Provision/MetaData.pm
 lib/Module/Provision/TraitFor/AddingFiles.pm
 lib/Module/Provision/TraitFor/Badges.pm
 lib/Module/Provision/TraitFor/CPANDistributions.pm
@@ -46,4 +47,27 @@ t/05kwalitee.t
 t/06yaml.t
 t/07podspelling.t
 t/10test_script.t
+t/20metadata.t
 t/boilerplate.pm
+t/code_templates/01always_pass.t
+t/code_templates/02pod.t
+t/code_templates/03podcoverage.t
+t/code_templates/05kwalitee.t
+t/code_templates/06yaml.t
+t/code_templates/07podspelling.t
+t/code_templates/10test_script.t
+t/code_templates/Build.PL
+t/code_templates/Changes
+t/code_templates/DZ_Build.PL
+t/code_templates/MANIFEST.SKIP
+t/code_templates/MI_Makefile.PL
+t/code_templates/boilerplate.pm
+t/code_templates/data_dumper.pm
+t/code_templates/dist.ini
+t/code_templates/gitcommit-msg
+t/code_templates/gitignore
+t/code_templates/gitpre-commit
+t/code_templates/index.json
+t/code_templates/perl_localenv
+t/code_templates/perl_module.pm
+t/code_templates/perl_program.pl
