@@ -56,9 +56,14 @@ directory         = inc
 directory         = share
 directory         = t
 
-[MetaProvides::Package]
+;[MetaProvides::Package]
+;inherit_version   = 0
+;meta_noindex      = 1
+
+[MetaProvides::FromFile]
 inherit_version   = 0
-meta_noindex      = 1
+file              = some_file.ini
+reader_name       = Module::Provision::MetaData
 
 [MetaResources]
 license           = http://dev.perl.org/licenses/
