@@ -1,5 +1,6 @@
 Revision history for Module::Provision
 
+          - Added our own MetaData::Provider since PPI is *so* slow
           - Updated toolchain
           - Readded ShareDir to dist ini
           - Added cover method
